# gitout

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RELEASING.md
.github/: dependabot.yaml
.github/workflows/: build.yml  build_and_publish.yml  pr.yml  rust.yml  security_audit.yml
root/app/: sync.sh
root/etc/cont-init.d/: 20-cron.sh
src/: args.rs  config.rs  github.rs  github_repos.graphql  github_schema.graphql  main.rs
