[package]
name = "gitout"
version = "0.1.0"
authors = ["Jake Wharton <gitout@jakewharton.com>"]
edition = "2018"

[dependencies]
git2 = "0.13"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.7"
toml = "0.5"
graphql_client = "0.9.0"

[profile.release]
codegen-units = 1
lto = true
