[package]
name = "gitout"
version = "0.2.0"
authors = ["Jake Wharton <gitout@jakewharton.com>"]
edition = "2018"
description = "A command-line tool to automatically backup Git repositories from GitHub or anywhere"
readme = "README.md"
repository = "https://github.com/JakeWharton/gitout/"
license = "MIT"
keywords = ["git", "github", "backup"]
categories = ["command-line-utilities"]
exclude = [".github/**"]

[dependencies]
git2 = "0.13"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.16"
toml = "0.5"
graphql_client = "0.9.0"

[profile.release]
codegen-units = 1
lto = true
